--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,8 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-/* body {
-  color: rgb(var(--foreground-rgb));
+body {
+  /* color: rgb(var(--foreground-rgb)); */
   background: linear-gradient(
       to bottom,
       transparent,
@@ -22,4 +22,4 @@
   .text-balance {
     text-wrap: balance;
   }
-} */
+}
